# dodo-integration-api-server

./: .gitignore  manage.py  pyproject.toml
accounts/: admin.py  exceptions.py  urls.py
accounts/migrations/: 0001_initial.py
accounts/models/: __init__.py  account.py  account_cookies.py  account_tokens.py
accounts/serializers/: __init__.py  account_tokens.py
accounts/services/: account_tokens.py  encryption.py
accounts/use_cases/: __init__.py  account_token_retrieve.py  account_tokens_update.py
accounts/views/: __init__.py  account_token_retrieve.py
core/: authentication.py  exceptions.py
dodo_integration/: asgi.py  settings.py  urls.py  wsgi.py
reports/: admin.py  exceptions.py  urls.py
reports/migrations/: 0001_initial.py  0002_initial.py  0002_reportroute.py  0003_reportroute_created_at.py
reports/models/: __init__.py  report_route.py  report_type.py  report_type_group.py
reports/serializers/: __init__.py  report_routes.py
reports/services/: report_routes.py  report_types.py
reports/use_cases/: __init__.py  report_route_create.py  report_route_delete.py  report_route_list.py
reports/views/: __init__.py  report_route_list_create_delete.py
telegram/: admin.py  apps.py  exceptions.py  urls.py
telegram/migrations/: 0001_initial.py  0002_alter_telegramchat_id_alter_telegramuser_id.py  0003_alter_telegramchat_title.py
telegram/models/: __init__.py  telegram_chat.py  telegram_user.py
telegram/serializers/: __init__.py  (+3 more)
units/: apps.py  exceptions.py  urls.py
user_roles/: admin.py  apps.py  exceptions.py  models.py  services.py
(+35 files in other folders)
